package com.example.translator_kmm.android.translate.presentation

object Routes {
    const val TRANSLATE = "translate"
    const val VOICE_TO_TEXT = "voice_to_text"
}